# chick

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
guest/: Cargo.toml
guest/.cargo/: config.toml
guest/src/: errors.rs  main.rs
host/: Cargo.toml
host/src/: main.rs
host/src/handlers/: inspect.rs
host/src/models/: mod.rs  package.rs  requests.rs  state.rs
host/src/services/: inspect.rs
host/src/utils/: errors.rs  line_reader.rs  mod.rs
