[package]
name = "chick-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperlight-guest = "0.1"
hyperlight-common = { version = "0.1", default-features = false }
heapless = "0.8"
serde = { version = "1.0.*", default-features = false }
serde_json = { version = "1.0.*", default-features = false }
postcard = "1.0"
thiserror = "1"
